--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.13.2",
     "collections": "^1.2.4",
     "cookie-parser": "~1.3.5",
+    "csv-parse": "^1.0.0",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "escape-html": "^1.0.3",
