--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.13.3",
     "collections": "^1.2.4",
     "cookie-parser": "~1.3.5",
     "csv-parse": "^1.0.0",
@@ -19,8 +19,13 @@
     "mkdirp": "^0.5.1",
     "morgan": "~1.6.1",
     "multer": "^1.0.3",
+    "q": "^1.4.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.7",
     "swig": "^1.4.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.4.5"
   }
 }
