--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "sendmail": "^0.2.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.7",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
