--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "escape-html": "^1.0.3",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
+    "graceful-fs": "^4.1.6",
     "i18n": "^0.7.0",
     "js-yaml": "^3.5.3",
     "marked": "^0.3.5",
@@ -29,7 +30,8 @@
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "vue": "^1.0.25"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
