--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodejs ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
@@ -31,7 +31,8 @@
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
     "url": "^0.11.0",
-    "vue": "^1.0.25"
+    "vue": "^1.0.25",
+    "colors": "~1.1.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
