--- a/package.json
+++ b/package.json
@@ -6,24 +6,26 @@
     "start": "redis-cli flushall && ulimit -n 4096 && nodejs ./bin/www"
   },
   "dependencies": {
-    "body-parser": "^1.13.3",
-    "bower": "^1.7.7",
+    "body-parser": "^1.18.3",
+    "bower": "^1.8.4",
+    "colors": "~1.1.2",
+    "connect-redis": "~3.2.0",
     "cookie-parser": "~1.3.5",
     "csv-parse": "^1.0.0",
-    "debug": "~2.2.0",
-    "ejs": "~2.5.5",
+    "debug": ">=2.6.9",
+    "ejs": "^2.5.9",
     "escape-html": "^1.0.3",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
-    "graceful-fs": "^4.1.6",
+    "graceful-fs": "^4.1.11",
     "i18n": "^0.7.0",
-    "js-yaml": "^3.5.3",
-    "marked": "^0.3.5",
+    "js-yaml": "^3.12.0",
+    "marked": "^0.3.19",
     "mkdirp": "^0.5.1",
-    "moment": "^2.11.2",
+    "moment": "^2.22.2",
     "morgan": "~1.6.1",
-    "multer": "^1.0.3",
-    "mysql": "^2.10.2",
+    "multer": "^1.4.1",
+    "mysql": "^2.16.0",
     "node-syntaxhighlighter": "^0.8.1",
     "randomstring": "^1.1.4",
     "sendmail": "^0.2.1",
@@ -31,9 +33,7 @@
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
     "url": "^0.11.0",
-    "vue": "^1.0.25",
-    "colors": "~1.1.2",
-    "connect-redis": "~3.2.0"
+    "vue": "^1.0.25"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
