extract https certification location from bin/www to config

--- a/_DEFAULTconfig.yml
+++ b/_DEFAULTconfig.yml
@@ -48,3 +48,11 @@ Disqus:
 # Privilege
 Privilege:
     register_key: 'test'
+
+# Certification
+Cert: [
+    {
+        domain: 'xxxx.xxxx.xxx',
+        location: '/etc/letsencrypt/live/xxxxxxxxx.xxxx.xxx' # location of https certification
+    }
+]
