--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mysql": "^2.16.0",
     "node-syntaxhighlighter": "^0.8.1",
     "randomstring": "^1.1.4",
+    "rotating-file-stream": "^2.0.2",
     "sendmail": "^0.2.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.3.7",
