--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
     "colors": "~1.1.2",
     "connect-redis": "~3.2.0",
     "cookie-parser": "~1.3.5",
-    "csv-parse": "^1.0.0",
+    "csv-parse": "^4.8.8",
     "debug": ">=2.6.9",
     "ejs": "^2.5.9",
     "escape-html": "^1.0.3",
-    "express": "~4.13.1",
+    "express": "^4.17.1",
     "express-session": "^1.13.0",
     "graceful-fs": "^4.1.11",
     "i18n": "^0.7.0",
-    "js-yaml": "^3.12.0",
-    "marked": "^0.3.19",
+    "js-yaml": "^3.13.1",
+    "marked": "^0.8.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.2",
-    "morgan": "~1.6.1",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "node-syntaxhighlighter": "^0.8.1",
     "randomstring": "^1.1.4",
     "rotating-file-stream": "^2.0.2",
     "sendmail": "^0.2.1",
-    "serve-favicon": "~2.3.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
     "url": "^0.11.0",
     "vue": "^1.0.25"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^4.0.2"
   }
 }
