--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bower": "^1.8.4",
+    "child_process": "^1.0.2",
     "colors": "~1.1.2",
     "connect-redis": "~3.2.0",
     "cookie-parser": "~1.3.5",
