--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ _config.yml
 *.csv
 
 # server upload temporary file dictionary
-files
+files/
 
 # https SSL
 *.pem
@@ -21,3 +21,6 @@ files
 
 # gulp produce
 public/javascripts/MathJax/
+
+# ignore images which are irrelative to the site
+public/images/avatar/
