Add FileResource test.

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,6 +2,8 @@ env:
   browser: true
   commonjs: true
   es2021: true
+  node: true
+  mocha: true
 extends: 'eslint:recommended'
 parserOptions:
   ecmaVersion: 12
