--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "socket.io": "^1.3.7",
     "swig": "^1.4.2",
     "url": "^0.11.0",
-    "vue": "^1.0.25"
+    "vue": "^1.0.25",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
