--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ulimit -n 4096 && NODE_PATH=./ nodejs ./bin/www",
     "fresh-start": "redis-cli flushall && ulimit -n 4096 && NODE_PATH=./ nodejs ./bin/www",
     "test": "NODE_PATH=./ NODE_ENV=test mocha --recursive --exit",
-    "test-log": "NODE_PATH=./ NODE_ENV=test-log mocha --recursive --exit"
+    "test-log": "NODE_PATH=./ NODE_ENV=test-log mocha --recursive --exit",
+    "build": "node ./node_modules/gulp/bin/gulp.js build"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -22,6 +23,7 @@
     "express": "^4.17.1",
     "express-session": "^1.13.0",
     "graceful-fs": "^4.1.11",
+    "gulp": "^4.0.2",
     "i18n": "^0.7.0",
     "js-yaml": "^3.13.1",
     "marked": "^0.8.0",
@@ -45,7 +47,6 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^7.16.0",
-    "gulp": "^4.0.2",
     "mocha": "^8.2.1"
   }
 }
