--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.13.0",
     "graceful-fs": "^4.1.11",
     "gulp": "^4.0.2",
+    "http-status-codes": "^2.1.4",
     "i18n": "^0.7.0",
     "js-yaml": "^3.13.1",
     "marked": "^0.8.0",
