Add node script for clearing session data.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "ulimit -n 4096 && NODE_PATH=./ nodejs ./bin/www",
+    "flush-redis": "redis-cli flushall",
     "fresh-start": "redis-cli flushall && ulimit -n 4096 && NODE_PATH=./ nodejs ./bin/www",
     "test": "NODE_PATH=./ NODE_ENV=test mocha --recursive --exit",
     "test-log": "NODE_PATH=./ NODE_ENV=test-log mocha --recursive --exit",
